--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
         <item>Female</item>
         <item>Other</item>
     </string-array>
+    <string name="title_activity_agreement">agreement</string>
 
 </resources>
